# ai-common-infra-utils

./: .releaserc.json  Dockerfile  README.md  makefile  pyproject.toml
.github/workflows/: linting.yaml  scanning.yaml  testing.yaml
ai_infra_common/: __init__.py  cli.py  metrics.py
src/: __init__.py  benchmark.py  logging.py
tests/: test_benchmark.py  test_cli.py  test_logging.py  test_metrics.py
